# parallel-programming

./: CMakeLists.txt  README.md  task1.cpp  task2.cpp  task3.cpp  task4_result.txt
MPI/: CMakeLists.txt  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp  task16_master.cpp  task18.cpp  task19.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task9.cpp
OpenMP/: .gitignore  CMakeLists.txt  task3_results.txt  task4.cpp  task5.cpp  task5_results.txt  task6.cpp
