cmake_minimum_required(VERSION 3.13)

find_package(MPI REQUIRED)

add_executable(task1 task1.cpp)
add_executable(task2 task2.cpp)
add_executable(task3 task3.cpp)
add_executable(task4 task4.cpp)
add_executable(task5 task5.cpp)
add_executable(task6 task6.cpp)

include_directories(task1 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task1 ${MPI_CXX_LIBRARIES})
include_directories(task2 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task2 ${MPI_CXX_LIBRARIES})
include_directories(task3 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task3 ${MPI_CXX_LIBRARIES})
include_directories(task4 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task4 ${MPI_CXX_LIBRARIES})
include_directories(task5 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task5 ${MPI_CXX_LIBRARIES})
include_directories(task6 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task6 ${MPI_CXX_LIBRARIES})