cmake_minimum_required(VERSION 3.13)

find_package(MPI REQUIRED)

add_executable(task1 task1.cpp)
add_executable(task2 task2.cpp)
add_executable(task3 task3.cpp)
add_executable(task4 task4.cpp)
add_executable(task5 task5.cpp)
add_executable(task6 task6.cpp)
add_executable(task7 task7.cpp)
add_executable(task8 task8.cpp)
add_executable(task9 task9.cpp)
add_executable(task10 task10.cpp)
add_executable(task11 task11.cpp)
add_executable(task12 task12.cpp)
add_executable(task13 task13.cpp)
add_executable(task14 task14.cpp)
add_executable(task15 task15.cpp)
add_executable(task16_master task16_master.cpp)
add_executable(task16_slave task16_slave.cpp)
add_executable(task18 task18.cpp)
add_executable(task19 task19.cpp)

include_directories(task1 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task1 ${MPI_CXX_LIBRARIES})
include_directories(task2 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task2 ${MPI_CXX_LIBRARIES})
include_directories(task3 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task3 ${MPI_CXX_LIBRARIES})
include_directories(task4 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task4 ${MPI_CXX_LIBRARIES})
include_directories(task5 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task5 ${MPI_CXX_LIBRARIES})
include_directories(task6 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task6 ${MPI_CXX_LIBRARIES})
include_directories(task7 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task7 ${MPI_CXX_LIBRARIES})
include_directories(task8 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task8 ${MPI_CXX_LIBRARIES})
include_directories(task9 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task9 ${MPI_CXX_LIBRARIES})
include_directories(task10 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task10 ${MPI_CXX_LIBRARIES})
include_directories(task11 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task11 ${MPI_CXX_LIBRARIES})
include_directories(task12 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task12 ${MPI_CXX_LIBRARIES})
include_directories(task13 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task13 ${MPI_CXX_LIBRARIES})
include_directories(task14 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task14 ${MPI_CXX_LIBRARIES})
include_directories(task15 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task15 ${MPI_CXX_LIBRARIES})
include_directories(task16_master ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task16_master ${MPI_CXX_LIBRARIES})
include_directories(task16_slave ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task16_slave ${MPI_CXX_LIBRARIES})
include_directories(task18 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task18 ${MPI_CXX_LIBRARIES})
include_directories(task19 ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(task19 ${MPI_CXX_LIBRARIES})
